Fix: Context copying is disabling default dimensions (#128)
* change setDimensions to putDimensions for context copy

* fixes for java target version downgrade